2008-10-01  Michael Wiegand <michael.wiegand@intevation.de>

	* doc/otp_specification_10.txt: Removed; the specification for OTP has
	been updated and moved to the OpenVAS compendium.

	* MANIFEST: Updated.

2008-09-25  Michael Wiegand <michael.wiegand@intevation.de>

	Post release version bump.

	* VERSION: Set to 2.0.0.beta2.SVN

2008-09-25  Michael Wiegand <michael.wiegand@intevation.de>

	Doing the 2.0-beta1 release.

	* VERSION: Set to 2.0.0.beta1

	* CHANGES: Updated.

2008-09-25  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/oval_plugins.c (ovaldi_launch), openvasd/dirutils.c
	(init_directories): Changed unsafe uses of sprintf to use snprintf with
	the correct buffer sizes.

2008-09-25  Michael Wiegand <michael.wiegand@intevation.de>

	* MANIFEST: Updated.

2008-09-25  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/oval_plugins.c: Added notice regarding running ovaldi with
	reduced privileges.

2008-09-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/comm.c (comm_init):  Removed setting of scan_ids
	and pubkey_auth.

2008-09-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/openvasd.c (server_thread): Removed
	conditional for ntp_11, because this is standard for otp.

	* openvasd/comm.c (comm_init):  Removed setting of ntp_11.
	(comm_wait_order): Removed conditional for ntp_11, because
	this is standard for otp.

	* openvasd/Makefile: Removed module ntp_10.

	* openvasd/ntp_10.h, openvasd/ntp_10.c: Removed. The only
	method defined there is not needed anymore since no ntp_10
	fallback does make sense with otp.

2008-09-22  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/ntp_11.c (ntp_11_parse_input): Replaced call of ntp_11_prefs()
	by calling ntp_11_read_prefs() for PREFERENCES command. ntp_11_prefs
	does nothing relevant except calling ntp_11_read_prefs.
	(ntp_11_prefs): Removed. It only handled escape_crlf which is fixed to
	true for OTP.
