@@ -1,5 +1,10 @@
 2008-10-01  Michael Wiegand <michael.wiegand@intevation.de>
 
+	* openvasd/oval_plugins.c: Changed to set OIDs exclusively; setting IDs
+	as a workaround for NTP is no longer required.
+
+2008-10-01  Michael Wiegand <michael.wiegand@intevation.de>
+
 	* doc/otp_specification_10.txt: Removed; the specification for OTP has
 	been updated and moved to the OpenVAS compendium.
 
